tests/snapshots/test__from_fixtures@format__format_unchanged.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    format: date
    type: string
  rhs:
    format: date
    type: string
input_file: tests/fixtures/format/format_unchanged.json
---
[]
